--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -620,6 +620,13 @@
   eventtitle = {2018 {{LLVM Developers}}' {{Meeting}}}
 }
 
+@book{hoyte2008let,
+  title = {Let over Lambda},
+  author = {Hoyte, Doug},
+  date = {2008},
+  file = {/home/philipp/Zotero/storage/DSLNPBH2/Hoyte D. - Let over lambda_ 50 years of LISP (2008, Lulu.com).djvu}
+}
+
 @online{innes2018don,
   title = {Don't {{Unroll Adjoint}}: {{Differentiating SSA}}-{{Form Programs}}},
   shorttitle = {Don't {{Unroll Adjoint}}},
@@ -1210,6 +1217,23 @@
   volume = {46},
   doi = {10.1145/1868294.1868314},
   file = {/home/philipp/Zotero/storage/LG2XRVI5/Rompf and Odersky - Lightweight Modular Staging A Pragmatic Approach .pdf}
+}
+
+@inproceedings{rosen1988global,
+  title = {Global Value Numbers and Redundant Computations},
+  booktitle = {Proceedings of the 15th {{ACM SIGPLAN}}-{{SIGACT}} Symposium on {{Principles}} of Programming Languages  - {{POPL}} '88},
+  author = {Rosen, B. K. and Wegman, M. N. and Zadeck, F. K.},
+  date = {1988},
+  pages = {12--27},
+  publisher = {{ACM Press}},
+  location = {{San Diego, California, United States}},
+  doi = {10.1145/73560.73562},
+  url = {http://portal.acm.org/citation.cfm?doid=73560.73562},
+  urldate = {2020-11-07},
+  eventtitle = {The 15th {{ACM SIGPLAN}}-{{SIGACT}} Symposium},
+  file = {/home/philipp/Zotero/storage/4GKKSI3B/Rosen et al. - 1988 - Global value numbers and redundant computations.pdf},
+  isbn = {978-0-89791-252-5},
+  langid = {english}
 }
 
 @online{ruffwind2016reversemode,
